kubernetes_basic/nginx-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-label
  labels:
    team: transaction
    version : 1.2.0
    environtment : production
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
