kubernetes_basic/nginx-probes.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-probe
  labels:
    environtment: production
  annotations:
    description: untuk pengujian 
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
