kubernetes_basic/service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: nginx.pailus.local
      http:
        paths:
          - path: /
            pathType: Prefix  # Ditambahkan karena diwajibkan di API v1
            backend:
              service:
                name: nginx-service  # "serviceName" diganti dengan "name"
                port:
                  number: 80        # "servicePort" diganti dengan "port.number"
